Repaired a crash that happened because italian was added. Should not happen again when a new language is added. Also created a new more cleaner UI with progress bars to see what the application is doing.

--- a/fcHelper/fcHelper.csproj
+++ b/fcHelper/fcHelper.csproj
@@ -163,6 +163,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LogLanguageEntry.cs" />
     <Compile Include="LanguageHelper.cs" />
     <Compile Include="VisibilityAnimation.cs" />
     <Compile Include="XmlParser.cs" />
